--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,36 @@
-*~
-Makefile
-demo
-build/
-run-tests
+# Object files
+lib*.so
+lib*.so.*
+*.a
 *.gdb-index
+*.o
+*.lo
+*.la
+
+# Autotools artifacts
+stamp*
+configure
+config.*
+autom4te.cache/**
+depcomp
+*.log
+INSTALL
+missing
+m4/**
+aclocal.m4
+install-sh
+Makefile.in
+libtool
+ltmain.sh
+.deps
+.libs
+Makefile
+rpm.spec
+alpha.m4
+
+# Dist artifacts
+*.tar.gz
+*.rpm
+
+# Qt artifacts
+moc_*
