--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,18 +1,21 @@
 check_PROGRAMS = runtest
-runtest_CXXFLAGS = $(AM_CXXFLAGS) @QT_CXXFLAGS@ -I$(top_srcdir)/src
-runtest_LDADD = @QT_LIBS@
+runtest_CPPFLAGS = @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @FREETYPE2_CFLAGS@ @LUA_INCLUDE@ @FTGL_CFLAGS@ @GL_CFLAGS@
+runtest_LDADD = @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @LUA_LIB@ @GL_LIBS@ ../src/libalpha.la
 
 TESTS = $(check_PROGRAMS)
 
 test_suites =         \
-	BasicTests
+	RotationTests \
+	Vector3Tests
 
 runtest_SOURCES =         \
 	tests.cpp             \
-	BasicTests.hpp
+	RotationTests.h \
+	Vector3Tests.h
 
 runtest_MOC_SOURCES = \
-	moc_BasicTests.cpp
+	moc_RotationTests.cpp \
+	moc_Vector3Tests.cpp
 
 nodist_runtest_SOURCES =      \
 	$(runtest_MOC_SOURCES)
@@ -21,11 +24,11 @@ mostlyclean-local:
 	rm -f $(runtest_MOC_SOURCES)
 .PHONY: mostlyclean-local
 
-tests.cpp: make_wrapper.sh $(addsuffix .hpp, $(test_suites))
+tests.cpp: make_wrapper.sh $(addsuffix .h, $(test_suites))
 	rm -f $@
 	./make_wrapper.sh $^ >$@-wip
 	mv $@-wip $@
 	chmod -w $@
 
-moc_%.cpp: %.hpp
+moc_%.cpp: %.h
 	@QT_MOC@ -o $@ $<
