Split demos out of the src/ dir
I also moved the font into media/ and updated references to that path.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,85 +5,28 @@ libalpha_la_LIBADD = @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @LUA_
 # moc-generated source files
 libalpha_la_MOC_SOURCES = \
 	moc_Alpha.cpp \
-	moc_AnimatedGLWidget.cpp \
-	moc_CubeGLWidget.cpp \
-	moc_DemoTabWidget.cpp \
-	moc_DiamondGLDemo.cpp \
-	moc_DiamondGLWidget.cpp \
-	moc_FontGLWidget.cpp \
-	moc_GLWidget.cpp \
-	moc_LogoGLWidget.cpp \
-	moc_LuaGLDemo.cpp \
-	moc_LuaGLWidget.cpp \
-	moc_MeasuredTimer.cpp \
-	moc_PlanetsGLWidget.cpp \
-	moc_RandomStippleGLWidget.cpp \
-	moc_RotatableGLDemo.cpp \
-	moc_StarGLDemo.cpp \
-	moc_StarGLWidget.cpp \
-	moc_VehicleGLWidget.cpp
+	moc_MeasuredTimer.cpp
 
 libalpha_la_SOURCES = \
 	$(libalpha_la_MOC_SOURCES) \
 	Alpha.cpp \
-	AnimatedGLWidget.cpp \
 	Camera.cpp \
-	CubeGLWidget.cpp \
 	Cuboid.cpp \
-	DiamondGLDemo.cpp \
-	DiamondGLWidget.cpp \
-	FontGLWidget.cpp \
-	GLWidget.cpp \
-	Logo.cpp \
-	LogoGLWidget.cpp \
-	LuaGLDemo.cpp \
-	LuaGLWidget.cpp \
 	MeasuredTimer.cpp \
-	PlanetsGLWidget.cpp \
 	PlayerInput.cpp \
-	RandomStippleGLWidget.cpp \
-	RotatableGLDemo.cpp \
-	StarGLDemo.cpp \
-	StarGLWidget.cpp \
 	ntgl.cpp \
 	Vector3.cpp \
-	VehicleGLWidget.cpp \
 	Alpha.h \
-	AnimatedGLWidget.h \
-	BlankGLWidget.h \
 	Camera.h \
 	config.h \
-	CubeGLWidget.h \
 	Cuboid.h \
-	DemoTabWidget.h \
-	DiamondGLDemo.h \
-	DiamondGLWidget.h \
-	FilmRollGLWidget.h \
-	FontGLWidget.h \
-	GLWidget.h \
 	Heights.h \
-	LogoGLWidget.h \
-	Logo.h \
-	LuaGLDemo.h \
-	LuaGLWidget.h \
 	MeasuredTimer.h \
 	Object.h \
-	PlanetsGLWidget.h \
 	Player.h \
 	PlayerInput.h \
-	RandomStippleGLWidget.h \
-	RotatableGLDemo.h \
-	SpiralGLWidget.h \
-	SpiralLinesGLWidget.h \
-	StarGLDemo.h \
-	StarGLWidget.h \
-	StippleGLWidget.h \
-	TorusGLWidget.h \
-	TriangleGLWidget.h \
-	TriangleStripGLWidget.h \
 	ntgl.h \
-	Vector3.h \
-	VehicleGLWidget.h
+	Vector3.h
 
 bin_PROGRAMS = alpha
 alpha_CPPFLAGS = $(libalpha_la_CPPFLAGS)
