Fixed demos build path for out-of-source-tree builds

--- a/demos/Makefile.am
+++ b/demos/Makefile.am
@@ -1,5 +1,5 @@
 bin_PROGRAMS = demo
-demo_CPPFLAGS = -I../src @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @FREETYPE2_CFLAGS@ @LUA_INCLUDE@ @FTGL_CFLAGS@ @GL_CFLAGS@
+demo_CPPFLAGS = -I$(top_srcdir)/src @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @FREETYPE2_CFLAGS@ @LUA_INCLUDE@ @FTGL_CFLAGS@ @GL_CFLAGS@
 demo_LDADD = -L../src -lalpha @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @LUA_LIB@ @GL_LIBS@
 
 # moc-generated source files
