--- a/configure.ac
+++ b/configure.ac
@@ -30,6 +30,9 @@ AC_LANG([C++])
 AX_CXX_COMPILE_STDCXX_11(,[CXX_11_CXXFLAGS])
 AC_SUBST([CXX_11_CXXFLAGS])
 
+ALPHA_GLOBAL_CXXFLAGS="-g -O0 -Wall -Werror"
+AC_SUBST([ALPHA_GLOBAL_CXXFLAGS])
+
 PKG_PROG_PKG_CONFIG
 PKG_CHECK_MODULES([FREETYPE2], [freetype2])
 PKG_CHECK_MODULES([FTGL], [ftgl])
