Moved most files under a nt namespace
This transition isn't totally complete, but I wanted to get it under way
before I did a whole lot of work on the rendering system. I avoided making
changes to the input classes, since these are currently under the hood. To
complete this transition, two steps will be taken:

* Move remaining classes under a nt namespace
* Rename src/ to nt/, and make files refer to each other using this path
(e.g., #include "nt/Vector3.h" instead of #include "Vector3.h"

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -9,29 +9,29 @@ libalpha_la_MOC_SOURCES = \
 
 libalpha_la_SOURCES = \
 	$(libalpha_la_MOC_SOURCES) \
-	GLOperation.cpp \
-	GLOperation.hpp \
-	Alpha.cpp \
-	Camera.cpp \
-	Cuboid.cpp \
+	gl/GLOperation.cpp \
+	gl/GLOperation.hpp \
+	gl/Camera.h \
+	gl/Camera.cpp \
+	gl/util.h \
+	gl/util.cpp \
+	gl/Cuboid.cpp \
+	gl/Cuboid.h \
+	gl/RenderLayer.hpp \
+	gl/DirectRenderLayer.hpp \
+	gl/Renderable.hpp \
+	gl/Physical.hpp \
+	math.hpp \
 	MeasuredTimer.cpp \
 	PlayerInput.cpp \
-	ntgl.cpp \
-	Vector3.cpp \
-	Alpha.h \
-	Camera.h \
+	Vector3.h \
 	config.h \
-	Cuboid.h \
 	MeasuredTimer.h \
 	Object.h \
 	Player.h \
 	PlayerInput.h \
-	ntgl.h \
-	RenderLayer.hpp \
-	DirectRenderLayer.hpp \
-	Renderable.hpp \
-	Physical.hpp \
-	Vector3.h
+	Alpha.h \
+	Alpha.cpp
 
 bin_PROGRAMS = alpha
 alpha_CPPFLAGS = $(libalpha_la_CPPFLAGS)
