VoxmapRenderLayer: Initial stab

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -19,6 +19,7 @@ libalpha_la_SOURCES = \
 	gl/Cuboid.hpp \
 	gl/RenderLayer.hpp \
 	gl/DirectRenderLayer.hpp \
+	gl/VoxmapRenderLayer.hpp \
 	gl/Renderable.hpp \
 	gl/Physical.hpp \
 	math.hpp \
