Box2 added, a 2-D bounding box
This may be templated in the future to allow different implementations
for efficiency purposes. For now, though, it works fine.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -26,6 +26,7 @@ libalpha_la_SOURCES = \
 	MeasuredTimer.cpp \
 	PlayerInput.cpp \
 	Vector3.hpp \
+	Box2.hpp \
 	config.h \
 	MeasuredTimer.hpp \
 	Object.hpp \
