Screen added, a manager of Viewports
Screen is the highest level class of the rendering hierarchy, outside of
Qt wrappers.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -35,6 +35,8 @@ libalpha_la_SOURCES = \
 	ArrayVoxmap.hpp \
 	gl/Viewport.hpp \
 	gl/Viewport.cpp \
+	gl/Screen.hpp \
+	gl/Screen.cpp \
 	Alpha.h \
 	Alpha.cpp
 
