Viewport: Substantial rewrite
I pulled out the Projections into a separate class, rather than having
them be templated. This lets Viewport be easily included in other
classes, and also lets the Projection develop into full-fledged objects
of their own.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -24,6 +24,9 @@ libalpha_la_SOURCES = \
 	gl/VoxmapRenderLayer.hpp \
 	gl/Renderable.hpp \
 	gl/Physical.hpp \
+	gl/Projection.hpp \
+	gl/PerspectiveProjection.cpp \
+	gl/PerspectiveProjection.hpp \
 	math.hpp \
 	MeasuredTimer.cpp \
 	PlayerInput.cpp \
