Bootstrapper added, a script for the rendering hierarchy
Bootstrapper gets everything set up. It shouldn't ever have anything
substantial going on, but the things here don't have a suitable home
elsewhere. I imagine as we add more functionality, some of these things
will be pulled out of Bootstrapper into other classes.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,8 @@ libalpha_la_SOURCES = \
 	gl/Screen.cpp \
 	gl/ScreenGLWidget.hpp \
 	gl/ScreenGLWidget.cpp \
+	Bootstrapper.hpp \
+	Bootstrapper.cpp \
 	Alpha.h \
 	Alpha.cpp
 
