Physical: Moved out of gl namespace
This class is closer to Vector3 than it is to the classes within the gl
namespace, hence the move.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -23,13 +23,13 @@ libalpha_la_SOURCES = \
 	gl/DirectRenderLayer.hpp \
 	gl/VoxmapRenderLayer.hpp \
 	gl/Renderable.hpp \
-	gl/Physical.hpp \
 	gl/Projection.hpp \
 	gl/PerspectiveProjection.cpp \
 	gl/PerspectiveProjection.hpp \
 	math.hpp \
 	MeasuredTimer.cpp \
 	PlayerInput.cpp \
+	Physical.hpp \
 	Vector3.hpp \
 	Box2.hpp \
 	MeasuredTimer.hpp \
