SortedLoop: Initial stab at a game loop

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -43,6 +43,8 @@ libalpha_la_SOURCES = \
 	gl/Screen.cpp \
 	gl/ScreenGLWidget.hpp \
 	gl/ScreenGLWidget.cpp \
+	SortedLoop.cpp \
+	SortedLoop.hpp \
 	Bootstrapper.hpp \
 	Bootstrapper.cpp \
 	Alpha.h \
