SortedLoop: Renamed to SystemLoop
The class remains functionally very close to the original SortedLoop,
but I think calling it SystemLoop gives a better hint of its purpose.

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -8,7 +8,7 @@ test_suites = \
 	VoxmapTests \
 	RotationTests \
 	RenderLayerTests \
-	SortedLoopTests \
+	SystemLoopTests \
 	Vector3Tests
 
 runtest_SOURCES = tests.cpp $(addsuffix .hpp, $(test_suites))
@@ -17,7 +17,7 @@ runtest_MOC_SOURCES = \
 	moc_VoxmapTests.cpp \
 	moc_RotationTests.cpp \
 	moc_RenderLayerTests.cpp \
-	moc_SortedLoopTests.cpp \
+	moc_SystemLoopTests.cpp \
 	moc_Vector3Tests.cpp
 
 nodist_runtest_SOURCES = $(runtest_MOC_SOURCES)
