InputMotion: Wire up keyboard motion for the camera
The input is admittedly still poor compared to the original Alpha, but
it's a start.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -33,6 +33,8 @@ libalpha_la_SOURCES = \
 	PlayerInput.cpp \
 	input/PlayerInputFilter.hpp \
 	input/PlayerInputFilter.cpp \
+	InputMotion.hpp \
+	InputMotion.cpp \
 	Physical.hpp \
 	Vector3.hpp \
 	Box2.hpp \
