--- a/configure.ac
+++ b/configure.ac
@@ -64,5 +64,5 @@ AC_LANG([C++])
 
 # Checks for library functions.
 
-AC_CONFIG_FILES([alpha.m4 Makefile src/Makefile demos/Makefile tests/Makefile rpm.spec])
+AC_CONFIG_FILES([alpha.m4 alpha.pc Makefile src/Makefile include/Makefile demos/Makefile tests/Makefile rpm.spec])
 AC_OUTPUT
