Use Boost for mathematical constants
This may seem a bit excessive just to get Pi, but I'd prefer to keep things
portable, and M_PI is strangely enough not.

Plus, I plan to use Boost more in the future, so it's nice to add the
dependency now.

--- a/alpha.pc.in
+++ b/alpha.pc.in
@@ -6,5 +6,5 @@ Description: OpenGL graphics library
 Version: @PACKAGE_VERSION@
 Requires: lua >= 5.0
 Libs: -L@libdir@ -l@PACKAGE_NAME@ @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @GL_LIBS@
-Cflags: @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @QT_CXXFLAGS@ -I@includedir@ @FREETYPE2_CFLAGS@ @FTGL_CFLAGS@ @GL_CFLAGS@
+Cflags: @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @QT_CXXFLAGS@ -I@includedir@ @FREETYPE2_CFLAGS@ @FTGL_CFLAGS@ @GL_CFLAGS@ @BOOST_CPPFLAGS@
 
