Don't try to use gcc extensions (breaks clang)

--- a/configure.ac
+++ b/configure.ac
@@ -20,7 +20,7 @@ LT_INIT
 AC_PROG_LIBTOOL
 
 AC_LANG([C++])
-AX_CXX_COMPILE_STDCXX_11(,[CXX_11_CXXFLAGS])
+AX_CXX_COMPILE_STDCXX_11([noext],[CXX_11_CXXFLAGS])
 AC_SUBST([CXX_11_CXXFLAGS])
 
 ALPHA_GLOBAL_CXXFLAGS="-g -O2"
