Fix an out-of-date include/lib in tests

--- a/tests/Makefile.am
+++ b/tests/Makefile.am
@@ -1,6 +1,6 @@
 check_PROGRAMS = runtest
-runtest_CPPFLAGS = @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @FREETYPE2_CFLAGS@ @LUA_INCLUDE@ @FTGL_CFLAGS@ @GL_CFLAGS@ -I$(top_srcdir)/src @ALPHA_GLOBAL_CXXFLAGS@
-runtest_LDADD = @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @LUA_LIB@ @GL_LIBS@ ../src/libalpha.la
+runtest_CPPFLAGS = @CXX_11_CXXFLAGS@ @QT_CXXFLAGS@ @LUA_CXX_INCLUDE@ @FREETYPE2_CFLAGS@ @FTGL_CFLAGS@ @GL_CFLAGS@ -I$(top_srcdir)/include @ALPHA_GLOBAL_CXXFLAGS@
+runtest_LDADD = @QT_LIBS@ @LUA_CXX_LIBS@ @FREETYPE2_LIBS@ @FTGL_LIBS@ @GL_LIBS@ ../src/libalpha.la
 
 TESTS = $(check_PROGRAMS)
 
