Ensure Qt apps compile on Fedora
Fedora compiles Qt5 with -reduce-relocations, which requires apps that
link to Qt to provide -fPIC.

--- a/configure.ac
+++ b/configure.ac
@@ -57,6 +57,7 @@ AX_HAVE_QT_WIDGETS
 AX_HAVE_QT_MOC
 AX_HAVE_QT_TEST
 AX_HAVE_QT_OPENGL
+QT_CXXFLAGS="$QT_CXXFLAGS -fPIC"
 
 # Checks for header files.
 
